# msp

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  render.yaml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/worker/: .env.example  AGENTS.md  README.md  pyproject.toml  requirements.txt
apps/worker/app/: bootstrap.py  config.py  container.py  logging_config.py  main.py
apps/worker/app/adapters/ai/: openai_client.py  openai_mock.py  openai_schemas.py
apps/worker/app/adapters/alerts/: webhook_alert_notifier.py
apps/worker/app/adapters/broker/: toss_auth.py  toss_client.py  toss_mock.py  toss_models.py
apps/worker/app/adapters/fundamentals/: opendart_account_mapping.py  opendart_client.py  opendart_mock.py  opendart_models.py
apps/worker/app/infrastructure/: circuit_breaker.py  graceful_shutdown.py  idempotency.py  memory_monitor.py  outbox.py  rate_limiter.py  release_metadata.py  retry.py  scheduler.py  secrets_redaction.py
apps/worker/app/tools/: cancel_live_order_once.py  check_provider_contract_gaps.py  collect_live_readiness_evidence_bundle.py  generate_monthly_ai_candidate.py  generate_monthly_research.py  paper_health_report.py  reconcile_live_orders_once.py  redeploy_render_worker.py  run_backtest.py  run_live_alert_drill_once.py  run_live_execution_safety_drill_once.py  run_live_incident_response_drill_once.py  run_live_recovery_drill_once.py  run_paper_cycle_once.py  seed_strategy_v1.py  seed_watchlist_demo.py  test_toss_readonly.py  trigger_render_deploy_hook.py  update_outcomes_once.py  verify_incident_response_evidence.py  verify_live_readiness_evidence_bundle.py  verify_live_readiness_scorecard.py  verify_provider_lifecycle_evidence.py  verify_security_scan_evidence.py  verify_system_order_scope_evidence.py  verify_worker_release_freshness.py  write_release_metadata.py
docs/: AGENTS.md  (+33 more)
(+294 files in other folders)
