[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msp"
version = "0.1.0"
description = "Windows-friendly safety-first public equity trading system scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pytest>=8.2",
]

[project.scripts]
msp = "msp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"msp.api" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
