[project]
name = "kr-auto-trading-worker"
version = "0.1.0"
description = "Safety-first Korean domestic stock auto-trading worker MVP"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "structlog>=24.1.0",
  "tenacity>=8.3.0",
  "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "hypothesis>=6.100.0",
  "freezegun>=1.5.0",
  "types-psutil>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]
