[package]
name = "kr_auto_trading_lab_desktop"
version = "0.1.0"
description = "KR Auto Trading Lab desktop cockpit"
authors = ["kr-auto-trading-lab"]
edition = "2021"

[lib]
name = "kr_auto_trading_lab_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

